--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="Index.html">
+<link rel="stylesheet" type="text/css" href="Index.css">
 <title>Matthew McConaughey</title>
 </head>
 
